
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct neighbour {int nud_state; } ;


 unsigned int ATF_COM ;
 unsigned int ATF_PERM ;
 int NUD_PERMANENT ;
 int NUD_VALID ;

__attribute__((used)) static unsigned arp_state_to_flags(struct neighbour *neigh)
{
 unsigned flags = 0;
 if (neigh->nud_state&NUD_PERMANENT)
  flags = ATF_PERM|ATF_COM;
 else if (neigh->nud_state&NUD_VALID)
  flags = ATF_COM;
 return flags;
}
